--- a/add_goal.html
+++ b/add_goal.html
@@ -167,7 +167,7 @@
     }
 
     await addDoc(
-      collection(db, "users", user.uid, "goals"),
+      collection(db, "users", user.email, "goals"),
       {
         title,
         type: type.value,
